remove friend section

--- a/index.html
+++ b/index.html
@@ -106,105 +106,7 @@
 				</div><!-- /.container -->
 			</div><!-- /.item -->
             <iframe src="http://tslmy.siftr.co/#/portfolio" style="width:100%;border:none;height:1435px;"></iframe>
-			<!--><div class="item team" id="team3">
-				<div class="container">
-					<div class="row margin-bottom-40">
-						<div class="col-md-12">
-							<p class="lead text-center">
-								My Friends
-							</p>
-						</div><!-- /.col-md-12 -->
-				<!-->	</div><!-- /.row -->
-				<!-->	<div class="row margin-bottom-20">
-						<div class="col-md-10 col-md-offset-1">
-							<div class="row margin-bottom-40">
-								<div class="col-md-6 clearfix">
-									<div class="pull-left photo">
-										<img alt="" class="img-circle" src="images/team1.jpg">
-									</div>
-									<div class="pull-left about">
-										<h5>
-											Mattijs Naus
-										</h5>
-										<p>
-											Web developer, designer, lover of cigars and fine whisky
-										</p>
-										<p class="contacts">
-											<span class="fa fa-envelope"></span> <a href="mailto">mattijs@somewhere.com</a><br>
-											<span class="fa fa-globe"></span> <a href="">www.somewhere.com</a>
-										</p>
-										<p class="social">
-											<a href=""><span class="fa fa-facebook-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-twitter-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-linkedin-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-google-plus-square"></span></a>
-										</p>
-									</div>
-								</div><!-- /.col-md-6 -->
-							<!-->	<div class="col-md-6 clearfix">
-									<div class="pull-left photo">
-										<img alt="" class="img-circle" src="images/team1.jpg">
-									</div>
-									<div class="pull-left about">
-										<h5>
-											Mattijs Naus
-										</h5>
-										<p>
-											Web developer, designer, lover of cigars and fine whisky
-										</p>
-										<p class="contacts">
-											<span class="fa fa-envelope"></span> <a href="mailto">mattijs@somewhere.com</a><br>
-											<span class="fa fa-globe"></span> <a href="">www.somewhere.com</a>
-										</p>
-										<p class="social">
-											<a href=""><span class="fa fa-facebook-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-twitter-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-linkedin-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-google-plus-square"></span></a>
-										</p>
-									</div>
-								</div><!-- /.col-md-6 -->
-						<!-->	</div><!-- /.row -->
-						<!-->	<div class="row margin-bottom-40">
-								<div class="col-md-6 clearfix">
-									<div class="pull-left photo">
-										<img alt="" class="img-circle" src="images/team1.jpg">
-									</div>
-									<div class="pull-left about">
-										<h5>
-											Mattijs Naus
-										</h5>
-										<p>
-											Web developer, designer, lover of cigars and fine whisky
-										</p>
-										<p class="contacts">
-											<span class="fui-mail"></span> <a href="mailto">mattijs@somewhere.com</a><br>
-											<span class="fui-home"></span> <a href="">www.somewhere.com</a>
-										</p>
-										<p class="social">
-											<a href=""><span class="fa fa-facebook-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-twitter-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-linkedin-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-google-plus-square"></span></a>
-										</p>
-									</div>
-								</div><!-- /.col-md-6 -->
-							<!-->	<div class="col-md-6 clearfix">
-									<div class="pull-left photo">
-										<img alt="" class="img-circle" src="images/team1.jpg">
-									</div>
-									<div class="pull-left about">
-										<h5>
-											Mattijs Naus
-										</h5>
-										<p>
-											Web developer, designer, lover of cigars and fine whisky
-										</p>
-										<p class="contacts">
-											<span class="fui-mail"></span> <a href="mailto">mattijs@somewhere.com</a><br>
-											<span class="fui-home"></span> <a href="">www.somewhere.com</a>
-										</p>
-										<p class="social">
-											<a href=""><span class="fa fa-facebook-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-twitter-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-linkedin-square"></span></a>&nbsp;&nbsp; <a href=""><span class="fa fa-google-plus-square"></span></a>
-										</p>
-									</div>
-								</div><!-- /.col-md-6 -->
-					<!-->		</div><!-- /.row -->
-				<!-->		</div><!-- /.col-md-8 -->
-				<!-->	</div><!-- /.row -->
-			<!-->	</div><!-- /.container -->
-			<!--></div><!-- /.item --><!-- Start Footer 1-3 -->
+<!-- Start Footer 1-3 -->
 			<section class="content-block-nopad bg-deepocean">
 				<div class="container footer-1-3">
 					<div class="col-md-4 pull-left">
