replaced illuminaughty with relator

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 							<img alt="" src="images/logo.svg" style="border-radius: 0px; border: 1px none rgb(238, 238, 238);height:100px;width:100px;">
 							<div class="editContent" style="">
 								<h3>
-									illuminaughty<span></span>
+									Relate
 								</h3>
 								<p>
-									A hackathon submission for <em>Terrible Hacks II</em>. Inputed with any concept, the webapp will show you how it's related to Illuminati.
+									Shows you how any two concepts can be related. ANY two.
 								</p>
 							</div><!-- /.editContent -->
-							<a class="btn btn-primary btn-embossed" href="https://illuminaughty.herokuapp.com" style="border-radius: 4px; font-size: 15px; background-color: rgb(43, 186, 158);">Play</a>
+							<a class="btn btn-primary btn-embossed" href="http://relator.herokuapp.com" style="border-radius: 4px; font-size: 15px; background-color: rgb(43, 186, 158);">Play</a>
 						</div><!-- /.col-md-4 col -->
 						<div class="col-md-4 text-center">
 							<img alt="" src="images/logo.svg" style="border-radius: 0px; border: 1px none rgb(238, 238, 238);height:100px;width:100px;">
