--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	<![endif]-->
 		<!--headerIncludes-->
 		<title>Limitic</title>
-        <style>.editContent p{color:#ccc}</style>
+        <!--https://coderwall.com/api-->
+        <link href="http://coderwall.com/stylesheets/jquery.coderwall.css" media="all" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="page" id="page">
@@ -56,8 +57,17 @@
 								<p class="editContent">
 									Welcome to my website. I'm currently an undergrad of University of Waterloo. I code for fun and enjoy photography.<br>
 									I'm a non-theist and a feminist, and I advocate animal rights. Feel free to contact me :)
-								</p><a class="btn btn-primary btn-embossed btn-wide" href="#content_section1" style="border-radius: 4px; font-size: 15px; background-color: rgb(52, 185, 159);"><span class="fa fa-arrow-circle-o-right">See my works</span></a>
+								</p><!--a class="btn btn-primary btn-embossed btn-wide" href="#content_section1" style="border-radius: 4px; font-size: 15px; background-color: rgb(52, 185, 159);"><span class="fa fa-arrow-circle-o-right">See my works</span></a-->
+                                <!--the Coderwall badges to render. -->
+                                <section class="coderwall" data-coderwall-username="tslmy" data-coderwall-orientation="horizontal"></section>
 							</div>
+                                <div class="col-md-5" id="twitterwidget">
+                                    								<h1 class="editContent">
+									My <a href="https://twitter.com/tslmy">Recent Activities</a>
+								</h1>
+                                    <a class="twitter-timeline" href="https://twitter.com/tslmy" data-widget-id="693824380225257472" data-chrome="nofooter noborders noheader  noscrollbar transparent" data-tweet-limit="1">@tslmy</a>
+                                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                                </div>
 						</div><!-- /.row -->
 					</div><!-- /.container -->
 				</header>
@@ -103,9 +113,46 @@
 							<a class="btn btn-primary btn-embossed" href="http://tslmy.github.io/Consora/" style="border-radius: 4px; font-size: 15px; background-color: rgb(53, 187, 161);">Play</a>
 						</div><!-- /.col-md-4 col -->
 					</div><!-- /.row -->
+					<div class="row">
+						<div class="col-md-4 text-center">
+							<img alt="" src="images/logo.svg" style="border-radius: 0px; border: 1px none rgb(238, 238, 238);height:100px;width:100px;">
+							<div class="editContent" style="">
+								<h3>
+									Chatroom
+								</h3>
+								<p>
+									A chat room powered by <a href="https://tlk.io/">tlk.io</a>.
+								</p>
+							</div><!-- /.editContent -->
+							<a class="btn btn-primary btn-embossed" href="https://tlk.io/tslmy" style="border-radius: 4px; font-size: 15px; background-color: rgb(43, 186, 158);">Chat</a>
+						</div><!-- /.col-md-4 col -->
+						<div class="col-md-4 text-center">
+							<img alt="" src="images/logo.svg" style="border-radius: 0px; border: 1px none rgb(238, 238, 238);height:100px;width:100px;">
+							<div class="editContent">
+								<h3>
+									Photograpy
+								</h3>
+								<p>
+									A collection of my photo . Currently only includes those posted on instagram...
+								</p>
+							</div><!-- /.editContent -->
+							<a class="btn btn-primary btn-embossed" href="http://tslmy.siftr.co/#/portfolio" style="border-radius: 4px; font-size: 15px; background-color: rgb(49, 185, 159);">See<br></a>
+						</div><!-- /.col-md-4 col -->
+						<!--div class="col-md-4 text-center">
+							<img alt="" src="images/logo.svg" style="border-radius: 0px; border: 1px none rgb(238, 238, 238);height:100px;width:100px;">
+							<div class="editContent">
+								<h3>
+									Consora
+								</h3>
+								<p>
+									A console written in Javascript. No longer continued actually.
+								</p>
+							</div><!-- /.editContent -->
+							<!--a class="btn btn-primary btn-embossed" href="http://tslmy.github.io/Consora/" style="border-radius: 4px; font-size: 15px; background-color: rgb(53, 187, 161);">Play</a-->
+						</div><!-- /.col-md-4 col -->
+					</div><!-- /.row -->
 				</div><!-- /.container -->
 			</div><!-- /.item -->
-            <iframe src="http://tslmy.siftr.co/#/portfolio" style="width:100%;border:none;height:1435px;"></iframe>
 <!-- Start Footer 1-3 -->
 			<section class="content-block-nopad bg-deepocean">
 				<div class="container footer-1-3">
@@ -200,5 +247,7 @@
 			  
 		  })
 		</script>
+        <!--coderwall-->
+        <script src="http://coderwall.com/javascripts/jquery.coderwall.js"></script>
 	</body>
 </html>
