added two more persona

--- a/index.html
+++ b/index.html
@@ -43,15 +43,17 @@
 				<li>Ming as a <b>social psychology researcher</b>: Check out my <a href="https://scholar.google.com/citations?user=rSJ_vnYAAAAJ">Google Scholar</a> profile for my prior publications.</li>
 				<li>Ming as a <b>bookworm</b>: Friend me on <a href="https://www.goodreads.com/user/show/65767626-mingyang">GoodReads</a>.</li>
 				<li>Ming as a <b>writer</b>: My <a href="https://tslmy.gitbook.io/k/">personal Wiki</a> should be a good starting point. Alternatively, here's my rarely-updated <a href="https://medium.com/dsmli">blog</a>.</li>
+				<li>Ming as a <b>music producer</b>: Some of my compositions are available on <a href="https://soundcloud.com/tslmy">SoundCloud</a>.</li>
+				<li>Ming as a stand-up comedian <b>in Mandarin Chinese</b>: Please refer to <a href="https://ggtkx.org/">硅谷脱口秀</a>.</li>
 			</ul>
 		</article>
 	</main>
 	<footer>
 		<p>
-			<sup>1</sup> If you had to consult Wikipedia for what a stand-up comedy is, you need more of it.
+			<small><sup>1</sup> If you had to consult Wikipedia for what a stand-up comedy is, you need more of it.</small>
 		</p>
 		<p>
-			All rights reserved, 2021 Mingyang Li.
+			<small>All rights reserved, 2021 Mingyang Li.</small>
 		</p>
 	</footer>
 </body>
