--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://andybrewer.github.io/mvp/mvp.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+	<link rel="icon" type="image/png" href="https://imgur.com/5sf5UArs.png">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-80712266-2"></script>
 	<script>
@@ -22,6 +23,7 @@
 <body>
 	<header>
         <nav>
+        	<img src="https://imgur.com/5sf5UArs.png" height=30 style="border-radius: 20px" />
             <ul>
 				<li>Home</li>
 				<li><a href="https://tilde.club/~my/">Serious</a></li>
@@ -43,8 +45,14 @@
 				<li>Ming as a <b>social psychology researcher</b>: Check out my <a href="https://scholar.google.com/citations?user=rSJ_vnYAAAAJ">Google Scholar</a> profile for my prior publications.</li>
 				<li>Ming as a <b>bookworm</b>: Friend me on <a href="https://www.goodreads.com/user/show/65767626-mingyang">GoodReads</a>.</li>
 				<li>Ming as a <b>writer</b>: My <a href="https://tslmy.gitbook.io/k/">personal Wiki</a> should be a good starting point. Alternatively, here's my rarely-updated <a href="https://medium.com/dsmli">blog</a>.</li>
-				<li>Ming as a <b>music producer</b>: Some of my compositions are available on <a href="https://soundcloud.com/tslmy">SoundCloud</a>.</li>
 				<li>Ming as a stand-up comedian <b>in Mandarin Chinese</b>: Please refer to <a href="https://ggtkx.org/">硅谷脱口秀</a>.</li>
+			</ul>
+			<h2>Creative Hobbies</h2>
+			<p>I'm teaching myself some music theory, sketching, and video editing now and then. Please refer to my...</p>
+			<ul>
+				<li><a href="https://behance.net/mingyli">Behance</a> profile for drawings.</li>
+				<li><a href="https://soundcloud.com/tslmy">SoundCloud</a> account for music compositions.</li>
+				<li><a href="https://www.youtube.com/user/Tslmy/videos">YouTube</a> channel for videos.</li>
 			</ul>
 		</article>
 	</main>
