--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ title: Page Not Found
         <img src="{{ site.icon }}" height=30 style="border-radius: 20px" />
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="https://tilde.club/~my/">Serious</a></li>
+            <li><a href="https://blog.myli.page/">Blog</a></li>
         </ul>
     </nav>
     <h1>404</h1>
